Deploy/UAT/deployment_uat.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-sample-alpha-uat
  namespace: openshift-gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-sample-alpha-uat
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-sample-alpha-uat
        deployment: nginx-sample-alpha-uat
    spec:
      containers:
        - name: nginx-sample-alpha-uat
          image: >-
            image-registry.openshift-image-registry.svc:5000/user1-argocd/nginx-sample-alpha@sha256:8087b1be391f6de5e2dd9e7e1b7b014b1fa28405edadfa1059ddc4b823726fac
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          env: []
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  paused: false
